Mostrar versão do build no rodapé do menu
